fixed overflowing

--- a/styles.css
+++ b/styles.css
@@ -393,7 +393,7 @@ div {
     }
   }
 
-  @media only screen and (max-width: 400px) {
+  @media only screen and (max-width: 730px) {
     .game-name {
       font-size: 100px;
     }
